2003-10-03  David Hyatt  <hyatt@apple.com>

	Fix for numerous regressions caused by an inadvertent renaming of the recursiveDisplay
	override method.
	
        Reviewed by darin

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView _recursiveDisplayRectIfNeededIgnoringOpacity:isVisibleRect:rectIsVisibleRectForView:topView:]):

2003-10-03  Richard Williamson (Home0  <rjw@apple.com>

	Fixed some edge case issue (control characters after end of word) with our rounding hack.

        Reviewed by Darin.

        * WebCoreSupport.subproj/WebTextRenderer.m:
        (-[WebTextRenderer _CG_floatWidthForRun:style:widths:fonts:glyphs:startGlyph:endGlyph:numGlyphs:]):

2003-10-03  Ken Kocienda  <kocienda@apple.com>

        Reviewed by Darin, with much help from Maciej and Hyatt

	Fix for this bug:

	<rdar://problem/3441321>: Form buttons do not respond to key events when focused

        * WebView.subproj/WebFrameView.m:
        (-[WebFrameView _firstResponderIsControl]): Added to tell if the focus
	is on a form control.
        (-[WebFrameView keyDown:]): Call new _firstResponderIsControl method to see
	whether space bar key events should propagate. Adding this check keeps us
	from blocking the event here and allows AppKit to handle it.
        * WebView.subproj/WebFrameViewPrivate.h: Add new _firstResponderIsControl 
	method.

2003-10-02  Maciej Stachowiak  <mjs@apple.com>

        Folded Private implementation files into the regular ones as the
	first step towards pulling in our SPI exposure and other code
	cleanup.

        * History.subproj/WebHistory.m:
        * History.subproj/WebHistoryPrivate.m: Removed.
        * Misc.subproj/WebIconDatabasePrivate.h:
        * WebKit.pbproj/project.pbxproj:
        * WebView.subproj/WebDataSource.m:
        * WebView.subproj/WebDataSourcePrivate.m: Removed.
        * WebView.subproj/WebFrame.m:
        * WebView.subproj/WebFramePrivate.m: Removed.
        * WebView.subproj/WebFrameView.m: